// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Heading component using <Text> component properties 1`] = `
.c0 {
  color: #4f6f8f;
  text-align: center;
}

<h3
  className="c0"
  color="gray"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 1`] = `
.c0 {
  color: #001833;
}

<h1
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 2`] = `
.c0 {
  color: #001833;
}

<h2
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 3`] = `
.c0 {
  color: #001833;
}

<h3
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 4`] = `
.c0 {
  color: #001833;
}

<h4
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 5`] = `
.c0 {
  color: #001833;
}

<h5
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 6`] = `
.c0 {
  color: #001833;
}

<h6
  className="c0"
/>
`;

exports[`Heading Heading component with no default font size, when "fontSize" prop not used 1`] = `
.c0 {
  color: #001833;
}

<h3
  className="c0"
/>
`;

exports[`Heading renders 1`] = `
.c0 {
  color: #001833;
}

<h3
  className="c0"
/>
`;
